package net.civeira.phylax.features.access.tenantloginprovider.domain;

import java.util.ArrayList;
import java.util.List;
import java.util.Optional;

import lombok.AccessLevel;
import lombok.AllArgsConstructor;
import lombok.Builder;
import lombok.EqualsAndHashCode;
import lombok.Getter;
import lombok.NonNull;
import lombok.ToString;
import lombok.With;
import lombok.experimental.Delegate;
import net.civeira.phylax.common.exception.ConstraintException;
import net.civeira.phylax.common.value.validation.ConstraintFail;
import net.civeira.phylax.common.value.validation.ConstraintFailList;
import net.civeira.phylax.features.access.tenantloginprovider.domain.event.TenantLoginProviderCreateEvent;
import net.civeira.phylax.features.access.tenantloginprovider.domain.event.TenantLoginProviderDeleteEvent;
import net.civeira.phylax.features.access.tenantloginprovider.domain.event.TenantLoginProviderDisableEvent;
import net.civeira.phylax.features.access.tenantloginprovider.domain.event.TenantLoginProviderEnableEvent;
import net.civeira.phylax.features.access.tenantloginprovider.domain.event.TenantLoginProviderEvent;
import net.civeira.phylax.features.access.tenantloginprovider.domain.event.TenantLoginProviderUpdateEvent;
import net.civeira.phylax.features.access.tenantloginprovider.domain.valueobject.CertificateVO;
import net.civeira.phylax.features.access.tenantloginprovider.domain.valueobject.DirectAccessVO;
import net.civeira.phylax.features.access.tenantloginprovider.domain.valueobject.DisabledVO;
import net.civeira.phylax.features.access.tenantloginprovider.domain.valueobject.MetadataVO;
import net.civeira.phylax.features.access.tenantloginprovider.domain.valueobject.NameVO;
import net.civeira.phylax.features.access.tenantloginprovider.domain.valueobject.PrivateKeyVO;
import net.civeira.phylax.features.access.tenantloginprovider.domain.valueobject.PublicKeyVO;
import net.civeira.phylax.features.access.tenantloginprovider.domain.valueobject.SourceVO;
import net.civeira.phylax.features.access.tenantloginprovider.domain.valueobject.TenantVO;
import net.civeira.phylax.features.access.tenantloginprovider.domain.valueobject.UidVO;
import net.civeira.phylax.features.access.tenantloginprovider.domain.valueobject.UsersEnabledByDefaultVO;
import net.civeira.phylax.features.access.tenantloginprovider.domain.valueobject.VersionVO;

/**
 * Represents a login identity provider (e.g., Google, GitHub, SAML) configured for a tenant.
 * Enables federated authentication integration.
 */
@Builder
@Getter
@With
@ToString
@AllArgsConstructor(access = AccessLevel.PRIVATE)
@EqualsAndHashCode
public class TenantLoginProvider implements TenantLoginProviderRef {

  /**
   * Prepare a new tenant login provider with the provided values
   *
   * @autogenerated EntityGenerator
   * @param change A set of values to create a new tenant login provider
   * @throws ConstraintException If there are some constraints fails on the changes.
   * @return A well formed tenant login provider.
   */
  public static TenantLoginProvider create(final TenantLoginProviderChangeSet change)
      throws ConstraintException {
    change.setDisabled(false);
    TenantLoginProvider instance = new TenantLoginProvider(change, Optional.empty());
    instance.addEvent(TenantLoginProviderCreateEvent.builder().payload(instance).build());
    return instance;
  }

  /**
   * The provider certificate used for signature verification, if required.
   *
   * @autogenerated EntityGenerator
   */
  @Delegate
  @Builder.Default
  private CertificateVO certificateValue = CertificateVO.nullValue();

  /**
   * If true, the system will default to this login method without requiring selection.
   *
   * @autogenerated EntityGenerator
   */
  @Delegate
  @Builder.Default
  private DirectAccessVO directAccessValue = DirectAccessVO.nullValue();

  /**
   * Indicates if this provider is currently disabled.
   *
   * @autogenerated EntityGenerator
   */
  @Delegate
  @Builder.Default
  private DisabledVO disabledValue = DisabledVO.nullValue();

  /**
   * A metadata file required by some providers for configuration (e.g., SAML descriptor).
   *
   * @autogenerated EntityGenerator
   */
  @Delegate
  @Builder.Default
  private MetadataVO metadataValue = MetadataVO.nullValue();

  /**
   * A name that identifies this login provider within the tenant.
   *
   * @autogenerated EntityGenerator
   */
  @Delegate
  @NonNull
  private NameVO nameValue;

  /**
   * Private key used internally to validate codes returned by the identity provider.
   *
   * @autogenerated EntityGenerator
   */
  @Delegate
  @Builder.Default
  private PrivateKeyVO privateKeyValue = PrivateKeyVO.nullValue();

  /**
   * A public key shared with users to interact with the identity provider.
   *
   * @autogenerated EntityGenerator
   */
  @Delegate
  @Builder.Default
  private PublicKeyVO publicKeyValue = PublicKeyVO.nullValue();

  /**
   * List of events
   *
   * @autogenerated EntityGenerator
   */
  @Builder.Default
  private List<TenantLoginProviderEvent> recordedEvents = List.of();

  /**
   * The source protocol or system used for authentication (e.g., GOOGLE, GITHUB, SAML).
   *
   * @autogenerated EntityGenerator
   */
  @Delegate
  @NonNull
  private SourceVO sourceValue;

  /**
   * The tenant this login provider is configured for.
   *
   * @autogenerated EntityGenerator
   */
  @Delegate
  @NonNull
  private TenantVO tenantValue;

  /**
   * A uid string to identify the entity
   *
   * @autogenerated EntityGenerator
   */
  @Delegate
  @NonNull
  private UidVO uidValue;

  /**
   * Defines whether the users created with this provider are enabled by default.
   *
   * @autogenerated EntityGenerator
   */
  @Delegate
  @NonNull
  private UsersEnabledByDefaultVO usersEnabledByDefaultValue;

  /**
   * Campo con el número de version de tenant login provider para controlar bloqueos optimistas
   *
   * @autogenerated EntityGenerator
   */
  @Delegate
  @Builder.Default
  private VersionVO versionValue = VersionVO.nullValue();

  /**
   * @autogenerated EntityGenerator
   * @param attribute
   * @param previous
   */
  private TenantLoginProvider(final TenantLoginProviderChangeSet attribute,
      final Optional<TenantLoginProvider> previous) {
    ConstraintFailList list = new ConstraintFailList();
    this.uidValue =
        attribute.getUid().orElse(previous.map(TenantLoginProvider::getUidValue).orElse(null));
    this.tenantValue = attribute.getTenant()
        .orElse(previous.map(TenantLoginProvider::getTenantValue).orElse(null));
    this.nameValue =
        attribute.getName().orElse(previous.map(TenantLoginProvider::getNameValue).orElse(null));
    this.sourceValue = attribute.getSource()
        .orElse(previous.map(TenantLoginProvider::getSourceValue).orElse(null));
    this.disabledValue = attribute.getDisabled().orElse(
        previous.map(TenantLoginProvider::getDisabledValue).orElseGet(DisabledVO::nullValue));
    this.directAccessValue = attribute.getDirectAccess().orElse(previous
        .map(TenantLoginProvider::getDirectAccessValue).orElseGet(DirectAccessVO::nullValue));
    this.publicKeyValue = attribute.getPublicKey().orElse(
        previous.map(TenantLoginProvider::getPublicKeyValue).orElseGet(PublicKeyVO::nullValue));
    this.privateKeyValue = attribute.getPrivateKey().orElse(
        previous.map(TenantLoginProvider::getPrivateKeyValue).orElseGet(PrivateKeyVO::nullValue));
    this.certificateValue = attribute.getCertificate().orElse(
        previous.map(TenantLoginProvider::getCertificateValue).orElseGet(CertificateVO::nullValue));
    this.metadataValue = attribute.getMetadata().orElse(
        previous.map(TenantLoginProvider::getMetadataValue).orElseGet(MetadataVO::nullValue));
    this.usersEnabledByDefaultValue = attribute.getUsersEnabledByDefault()
        .orElse(previous.map(TenantLoginProvider::getUsersEnabledByDefaultValue).orElse(null));
    this.versionValue = attribute.getVersion()
        .orElse(previous.map(TenantLoginProvider::getVersionValue).orElseGet(VersionVO::nullValue));
    if (null == uidValue) {
      list.add(new ConstraintFail("REQUIRED", "uid", null));
    }
    if (null == tenantValue) {
      list.add(new ConstraintFail("REQUIRED", "tenant", null));
    }
    if (null == nameValue) {
      list.add(new ConstraintFail("REQUIRED", "name", null));
    }
    if (null == sourceValue) {
      list.add(new ConstraintFail("REQUIRED", "source", null));
    }
    if (null == usersEnabledByDefaultValue) {
      list.add(new ConstraintFail("REQUIRED", "usersEnabledByDefault", null));
    }
    if (list.hasErrors()) {
      throw new ConstraintException(list);
    }
    this.recordedEvents = previous.map(TenantLoginProvider::getRecordedEvents).orElseGet(List::of);
  }

  /**
   * Apply changes to delete a tenant login provider
   *
   * @autogenerated EntityGenerator
   * @return A instance of tenant login provider ready to be deleted
   */
  public TenantLoginProvider delete() {
    TenantLoginProvider instance =
        new TenantLoginProvider(new TenantLoginProviderChangeSet(), Optional.of(this));
    instance.addEvent(TenantLoginProviderDeleteEvent.builder().payload(instance).build());
    return instance;
  }

  /**
   * Apply disable on tenant login provider. Disables the login provider and prevents authentication
   * via this source.
   *
   * @autogenerated EntityGenerator
   * @return A modified instance of tenant login provider
   */
  public TenantLoginProvider disable() {
    TenantLoginProviderChangeSet attr = new TenantLoginProviderChangeSet();
    attr.setDisabled(true);
    TenantLoginProvider instance = new TenantLoginProvider(attr, Optional.of(this));
    instance.addEvent(TenantLoginProviderDisableEvent.builder().payload(instance).build());
    return instance;
  }

  /**
   * Apply enable on tenant login provider. Enables the login provider and allows users to
   * authenticate with it.
   *
   * @autogenerated EntityGenerator
   * @return A modified instance of tenant login provider
   */
  public TenantLoginProvider enable() {
    TenantLoginProviderChangeSet attr = new TenantLoginProviderChangeSet();
    attr.setDisabled(false);
    TenantLoginProvider instance = new TenantLoginProvider(attr, Optional.of(this));
    instance.addEvent(TenantLoginProviderEnableEvent.builder().payload(instance).build());
    return instance;
  }

  /**
   * Modify the values for some of the properties of a tenant login provider
   *
   * @autogenerated EntityGenerator
   * @param change The properties to be modified
   * @throws ConstraintException If there are some constraints fails on the changes.
   * @return A modified instance of tenant login provider
   */
  public TenantLoginProvider update(final TenantLoginProviderChangeSet change)
      throws ConstraintException {
    change.unsetDisabled();
    TenantLoginProvider instance = new TenantLoginProvider(change, Optional.of(this));
    instance.addEvent(TenantLoginProviderUpdateEvent.builder().payload(instance).build());
    return instance;
  }

  /**
   * @autogenerated EntityGenerator
   * @return
   */
  public TenantLoginProvider withNextVersion() {
    return withVersionValue(VersionVO.from(nextVersion()));
  }

  /**
   * @autogenerated EntityGenerator
   * @param event
   */
  private void addEvent(final TenantLoginProviderEvent event) {
    List<TenantLoginProviderEvent> events = new ArrayList<>(this.recordedEvents);
    events.add(event);
    this.recordedEvents = List.copyOf(events);
  }
}
