' @autogenerated
@startuml Paquete de master
title Paquete de master
left to right direction
class master.Role{
uid:string
name:string
version:integer
list()
retrieve()
create()
update()
delete()
}
master.RelyingParty "1"  o--  "N*" master.Role: relyingParty 

class master.UserAccessTemporalCode{
uid:string
tempSecondFactorSeed:string
tempSecondFactorSeedExpiration:datetime
failedLoginAttempts:integer
registerCode:string
registerCodeUrl:string
registerCodeExpiration:datetime
recoveryCode:string
recoveryCodeExpiration:datetime
version:integer
list()
retrieve()
create()
update()
delete()
markLoginFail()
markLoginBlock()
markLoginOk()
generateMfaTemporalCode()
resetMfaTemporalCode()
generatedRegisterVerification()
resetRegisterVerification()
generatePasswordRecover()
resetPasswordRecover()
}
master.User "1"  o--  "N*" master.UserAccessTemporalCode: user 

class master.RelyingParty{
uid:string
code:string
apiKey:string
enabled:boolean
version:integer
list()
retrieve()
create()
update()
delete()
enable()
disable()
}

class master.TrustedClient{
uid:string
code:string
publicAllow:boolean
secretOauth:string
enabled:boolean
version:integer
list()
retrieve()
create()
update()
delete()
enable()
disable()
}

class master.UserIdentity{
uid:string
version:integer
list()
retrieve()
create()
update()
delete()
}
master.User "1"  o--  "N*" master.UserIdentity: user 
master.RelyingParty "1"  o--  "N*" master.UserIdentity: relyingParty 
master.TrustedClient "1"  o--  "N*" master.UserIdentity: trustedClient 

class master.UserAcceptedTermnsOfUse{
uid:string
acceptDate:datetime
version:integer
list()
retrieve()
create()
update()
delete()
}
master.User "1"  o--  "N*" master.UserAcceptedTermnsOfUse: user 
master.TenantTermsOfUse "1"  o--  "N*" master.UserAcceptedTermnsOfUse: conditions 

class master.TenantConfig{
uid:string
innerLabel:string
forceMfa:boolean
allowRegister:boolean
enableRegisterUsers:boolean
wellcomeEmail:blob
registerdEmail:blob
disabledUserEmail:blob
enabledUserEmail:blob
allowRecoverPass:boolean
recoverPassEmail:blob
version:integer
list()
retrieve()
create()
update()
delete()
}
master.Tenant "1"  o--  "N*" master.TenantConfig: tenant 

class master.ApiKeyClient{
uid:string
code:string
key:string
enabled:boolean
scopes:string
version:integer
list()
retrieve()
create()
update()
delete()
enable()
disable()
}

class master.TenantLoginProvider{
uid:string
name:string
source:TenantLoginProviderSourceOptions
disabled:boolean
directAccess:boolean
publicKey:string
privateKey:string
certificate:blob
metadata:binary
usersEnabledByDefault:boolean
version:integer
list()
retrieve()
create()
update()
delete()
enable()
disable()
}
master.Tenant "1"  o--  "N*" master.TenantLoginProvider: tenant 

class master.TenantTermsOfUse{
uid:string
text:blob
enabled:boolean
attached:binary
activationDate:datetime
version:integer
list()
retrieve()
create()
update()
delete()
enable()
disable()
}
master.Tenant "1"  o--  "N*" master.TenantTermsOfUse: tenant 

class master.User{
uid:string
name:string
password:string
email:string
wellcomeAt:datetime
enabled:boolean
approve:UserApproveOptions
temporalPassword:boolean
useSecondFactors:boolean
secondFactorSeed:string
blockedUntil:datetime
provider:string
version:integer
list()
retrieve()
create()
update()
delete()
register()
verify()
accept()
reject()
disable()
enable()
unlock()
block()
setMfaSeed()
changePassword()
}
master.Tenant "1"  o--  "N*" master.User: tenant 

class master.Tenant{
uid:string
name:string
root:boolean
domain:string
enabled:boolean
markForDelete:boolean
markForDeleteTime:datetime
version:integer
list()
retrieve()
create()
update()
delete()
enable()
disable()
}

master.RelyingParty "1"  o--  "N*" master.Role: relyingParty  
master.User "1"  o--  "N*" master.UserAccessTemporalCode: user  
master.TrustedClientAllowedRedirect "N*"  o--  "N*" master.TrustedClient: allowedRedirects  
master.User "1"  o--  "N*" master.UserIdentity: user  
master.RelyingParty "1"  o--  "N*" master.UserIdentity: relyingParty  
master.TrustedClient "1"  o--  "N*" master.UserIdentity: trustedClient  
master.UserIdentity "N*"  o--*  "N*" master.Role: roles
master.User "1"  o--  "N*" master.UserAcceptedTermnsOfUse: user  
master.TenantTermsOfUse "1"  o--  "N*" master.UserAcceptedTermnsOfUse: conditions  
master.Tenant "1"  o--  "N*" master.TenantConfig: tenant  
master.Tenant "1"  o--  "N*" master.TenantLoginProvider: tenant  
master.Tenant "1"  o--  "N*" master.TenantTermsOfUse: tenant  
master.Tenant "1"  o--  "N*" master.User: tenant  

footer Generado el %date("dd.MM.yyyy' a las 'HH:mm")
@enduml
